--- a/login_page_prototype.html
+++ b/login_page_prototype.html
@@ -65,14 +65,14 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="icon" href="Dahlia_Logo_gradient_icon.ico">
+    <link rel="icon" href="img/Dahlia_Logo_gradient_icon.ico">
     <title>Dahlia</title>
 </head>
 <body>
 
       
       <div class="content">
-        <a><img src="sphere2.png" alt="sphere" class="sphere"></a>
+        <a><img src="img/sphere2.png" alt="sphere" class="sphere"></a>
         <form action="#.php">
             <input type="text" name="mail" placeholder="Mail Address" required>
             <input type="password" name="psw" placeholder="Password" required>
