--- a/test.html
+++ b/test.html
@@ -94,6 +94,9 @@
             width: 40%;
             height: 40%;
         }
+        .pic{
+          height: 50px;
+        }
     </style>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -103,7 +106,7 @@
 </head>
 <body>
     <div class="topnav">
-        <a href="#"><img src="main.png" alt="Logo" class="pic"></a>
+        <a href="#"><img src="img/main.png" alt="Logo" class="pic"></a>
       </div>
       
       <div class="content">
